data/derived/sp14/progs/unify/prog2224.ml.out
Characters 872-875:
  | TheThing (ex1,ex2,ex3) -> "("^exprToString ex1^"*sin("^exprToString ex2^")*cos("^exprToString ex3^")"")";;
                                                                                                      ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
